ingress/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: voucher-management-app
  name: ingress-voucher
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:891377130731:certificate/98eb4558-b5d5-49af-a29e-89d5739a72a9
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=false
    alb.ingress.kubernetes.io/idle-timeout: '3600'
spec:
  ingressClassName: alb
  rules:
    - host: demo.devplify.com
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ingress-nginx-controller
              port:
                number: 80
